--- a/family.html
+++ b/family.html
@@ -13,6 +13,7 @@
         <li><a href="index.html">Index</a></li>
         <li class="selected">Family</li>
         <li><a href="pets.html">Pets</a></li>
+        <li><a href="my-first-webpage">My First Webpage</a>
         </ul>
     <h1>My Family</h1>
     <ol>
