--- a/pets.html
+++ b/pets.html
@@ -12,7 +12,8 @@
         <li><a href="Games.html">Games</a></li>
         <li><a href="index.html">Index</a></li>
         <li><a href="family.html">Family</a></li>
-        <li class="selected">Pets</li>>
+        <li class="selected">Pets</li>
+        <li><a href="my-first-webpage">My First Webpage</a>
     </ul>   
     <h1>My Pets</h1>
     <p>I have one pet</p>
